<resources>
    <string name="app_name">PetCare</string>
    <string name="aprendendo">Confuso</string>
    <string name="name_app">PetCare</string>
    <string name="frase_abaixo_logo_homepage">Encontre uma clínica veterinária com facilidade</string>
    <string name="button_cadastrar_clinicas">Cadastrar Clinícas</string>
    <string name="button_cadastrar_me">Cadastrar-me</string>
    <string name="button_fazer_login">Fazer login</string>
    <string name="endereco_tela_cadastar_clinicas">Endereço</string>
    <string name="telefone_tela_cadastar_clinicas">Telefone</string>
    <string name="nome_da_clinica_tela_cadastar_clinicas">Nome da cliníca</string>
    <string name="cnpj_tela_cadastar_clinicas">CNPJ</string>
    <string name="razao_social_tela_cadastar_clinicas">Razão social</string>
    <string name="senha_tela_cadastar_clinicas">Senha</string>
    <string name="senha_tela_cadastrar_me">Senha</string>
    <string name="telefone_tela_cadastrar_me">Telefone</string>
    <string name="e_mail_tela_cadastrar_me">E-mail</string>
    <string name="apelido_tela_cadastrar_me">Apelido</string>
    <string name="nome_completo_tela_cadastrar_me">Nome completo</string>
    <string name="cadastre_se_tela_cadastrar_me">Cadastre-se</string>
    <string name="button_tela_cadastrar_me">Cadastrar</string>
    <string name="fazer_login_tela_login">Fazer login</string>
    <string name="e_mail_tela_login">E-mail</string>
    <string name="senha_tela_login">Senha</string>
    <string name="especialidade_tela_cadastrar_clinicas">Especialidade</string>
    <string name="txt_fazer_login_clinica">Fazer login na clínica</string>
    <string name="eu_sou_uma_clinica_tela_login">Eu sou uma clinica</string>
    <string name="cnpj_tela_login_clinica">CNPJ</string>
    <string name="senha_tela_login_clinica">Senha</string>
    <string name="fazer_login_clinica_tela_login_clinica">Fazer login na clínica</string>
    <string name="botao_login_tela_clinica">Login</string>
    <string name="cadastrar_clinica_tela_cadastrar_clinica">Cadastrar Clinica</string>
    <string name="texto_cadastre_sua_clinica_tela_cadastrar_clininas">Cadastre sua clínica</string>
    <string name="campo_cnpj_tela_login_clinica">CNPJ</string>
    <string name="cnpj_tela_de_login_clinica">CNPJ</string>
    <string name="login_tela_fazer_login">login</string>
    <string name="button_eu_sou_uma_cl_nica">Eu sou uma clínica</string>
</resources>