<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FazerLoginActivity"
    android:orientation="vertical"
    android:layout_marginTop="24dp"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fazer_login_tela_login"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="45dp"
        />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/e_mail_tela_login"
        android:layout_marginTop="30dp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_text_senha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/senha_tela_login"
        android:layout_marginTop="20dp"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login_tela_fazer_login"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:backgroundTint="@color/botoes_homepage"
        android:text="@string/login_tela_fazer_login"

        />


    <ImageView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/img_login_google"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5sp"
        android:contentDescription="@string/aprendendo" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/img_login_facebook"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5sp"
        android:contentDescription="@string/aprendendo" />



</LinearLayout>